tests/paczka1/fuzzy1/66331179.err
Error in line 6: A112 S997 61,2
Error in line 9: zmPcInRMv49 A254 26,1
Error in line 5: lHDbyZjGfr S997 15,6
Error in line 15: P52 A112 28,7
Error in line 25: BueWmW S997 1,8
Error in line 24: sc1zITghcY A112 55,1
